# simhark

./: .gitignore  Cargo.toml  build.rs  grSim
.cargo/: local.toml
benches/: simulation.rs
crates/match-runner/: Cargo.toml
crates/match-runner/src/: controller.rs  director.rs  evaluator.rs  lib.rs  logio.rs  referris_autoref.rs  sumatra_match.rs
crates/simhark-sumatra/: Cargo.toml  build.rs
crates/simhark-sumatra/proto/: SimRequest.proto  SimState.proto
crates/simhark-sumatra/src/: lib.rs  sim_net.rs
crates/simhark_faabs/: Cargo.toml  config.toml
crates/simhark_faabs/src/: conv.rs  debug.rs  interface.rs  lib.rs  main.rs  run.rs  synth.rs
crates/simhark_testing/: Cargo.toml
crates/simhark_testing/src/: lib.rs
examples/: faabs.rs  predefined_trajectory_shot.rs  sumatra_blue_scores.rs  sumatra_selfplay.rs  sumatra_selfplay_two_worlds.rs  testing_viewer.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  app.css
frontend/src/components/: ControlPanel.tsx  DebugPanel.tsx  FieldCanvas.tsx  GameStatePanel.tsx  StatsPanel.tsx  TestPanel.tsx  WorldSelector.tsx
frontend/src/hooks/: useViewerSocket.ts
proto/: SimBotAction.proto  SimCommon.proto  SimReferee.proto  SimRegister.proto  SimResponse.proto  ssl_gc_common.proto  ssl_simulation_config.proto  ssl_simulation_control.proto  ssl_simulation_error.proto  ssl_simulation_robot_control.proto  ssl_simulation_robot_feedback.proto  ssl_vision_detection.proto  ssl_vision_geometry.proto
src/: command.rs  config.rs  controller.rs  domain_randomization.rs  engine.rs  geometry.rs  grsim.rs  lib.rs  main.rs  motion_audit.rs  physics.rs  proto.rs  robot.rs  state.rs  sumatra.rs  viewer.rs  world.rs
tests/: integration_tests.rs
