[package]
name = "robocup-sim"
version = "0.1.0"
edition = "2024"
description = "A high-performance parallel RoboCup SSL simulator inspired by grSim"
license = "GPL-3.0"

[lib]
name = "robocup_sim"
path = "src/lib.rs"

[[bin]]
name = "robocup-sim"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
nalgebra = "0.33"
rapier3d = { version = "0.22", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
rand_chacha = "0.9"
parking_lot = "0.12"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"

[[bench]]
name = "simulation"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
