[package]
name = "simhark"
version = "0.1.0"
edition = "2024"
description = "A high-performance parallel RoboCup SSL simulator inspired by grSim"
license = "GPL-3.0"

[lib]
name = "simhark"
path = "src/lib.rs"

[[bin]]
name = "simhark"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
nalgebra = "0.33"
rapier3d = { version = "0.22", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
rand_chacha = "0.9"
parking_lot = "0.12"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.11"
prost = "0.13"
prost-types = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"

[build-dependencies]
prost-build = "0.13"

[[bench]]
name = "simulation"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
