[package]
name = "simhark"
version = "0.1.0"
edition = "2024"
description = "A high-performance parallel RoboCup SSL simulator inspired by grSim"
license = "GPL-3.0"

[workspace]
members = ["crates/simhark-sumatra"]
resolver = "2"

[features]
default = ["viewer"]
viewer = ["dep:tiny_http", "dep:tungstenite"]
motion-audit = []

[lib]
name = "simhark"
path = "src/lib.rs"

[[bin]]
name = "simhark"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
nalgebra = "0.34.2"
rapier3d = { version = "0.32.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.10.0"
rand_chacha = "0.10.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.11"
prost = "0.14.3"
prost-types = "0.14.3"
tiny_http = { version = "0.12", optional = true }
tungstenite = { version = "0.29.0", default-features = false, features = ["handshake"], optional = true }

[dev-dependencies]
anyhow = "1.0"
criterion = { version = "0.8.2", features = ["html_reports"] }
approx = "0.5"
ctrlc = "3.5"
referris = { path = "../referris", default-features = false }
simhark-sumatra = { path = "crates/simhark-sumatra" }

[build-dependencies]
prost-build = "0.13"

[[bench]]
name = "simulation"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
