[package]
name = "match-runner"
version = "0.1.0"
edition = "2024"
description = "Run RoboCup SSL AI vs AI matches in simhark with scoring and SSL-log output"
license = "GPL-3.0"

[lib]
name = "match_runner"
path = "src/lib.rs"

# Binaries are auto-discovered from src/bin/ (match-sim, bench).

[dependencies]
simhark = { path = "../.." }
simhark_faabs = { path = "../simhark_faabs" }
simhark-sumatra = { path = "../simhark-sumatra", optional = true }
loguna = { git = "https://github.com/Technulgy-LGNU/loguna" }
core_dump = { git = "https://github.com/Technulgy-LGNU/core-dump" }
referris = { git = "https://github.com/Technulgy-LGNU/referris", default-features = false, optional = true }
anyhow = "1.0"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

bangka = { path = "../../../bangka/bangka", optional = true }
bongka = { path = "../../../bangka/bongka", optional = true }
ungabunga = { path = "../../../bangka/ungabunga", optional = true }
artificial_incompetence = { git = "https://github.com/Technulgy-LGNU/CrashPilot", optional = true }

[features]
default = ["bangka", "bongka", "ungabunga", "sim-time"]
bangka = ["dep:bangka"]
bongka = ["dep:bongka"]
ungabunga = ["dep:ungabunga"]
artificial_incompetence = ["dep:artificial_incompetence"]
viewer = ["simhark/viewer"]
viewer-debug = ["viewer", "simhark/viewer-debug", "simhark_faabs/viewer-debug"]
sim-time = ["simhark_faabs/sim-time"]
sumatra = ["dep:simhark-sumatra"]
referris = ["dep:referris"]
validator = ["referris"]
