[package]
name = "simhark_faabs"
version = "0.1.0"
edition = "2024"

[dependencies]
simhark = { path = "../.." }
CrashPilot = { git = "https://github.com/Technulgy-LGNU/CrashPilot" }
tf_jetsoncode = { git = "https://github.com/Technulgy-LGNU/teamfaabs-ssl-robot-code" }
referris-simhark = { git = "https://github.com/Technulgy-LGNU/referris" }
referris = { git = "https://github.com/Technulgy-LGNU/referris" }
tokio = { version = "1.52.3", optional = true }
tokio-tungstenite = { version = "0.29.0", optional = true }
futures-util = { version = "0.3.32", optional = true }
prost = { version = "0.14.3", optional = true }

[features]
default = []
interface = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util", "dep:prost", "CrashPilot/interface"]

