[package]
name = "simhark_faabs"
version = "0.1.0"
edition = "2024"

[dependencies]
simhark = { path = "../.." }
simhark_testing = { path = "../simhark_testing", optional = true }
crashpilot = { git = "https://github.com/Technulgy-LGNU/CrashPilot" }
tf_jetsoncode = { git = "https://github.com/Technulgy-LGNU/teamfaabs-ssl-robot-code" }
referris-simhark = { git = "https://github.com/Technulgy-LGNU/referris" }
referris = { git = "https://github.com/Technulgy-LGNU/referris" }
core_dump = { git = "https://github.com/Technulgy-LGNU/core-dump" }
tokio = { version = "1.52.3", optional = true}
tokio-tungstenite = { version = "0.29.0", optional = true }
futures-util = { version = "0.3.32", optional = true }
prost = { version = "0.14.3", optional = true }

[features]
default = []
viewer = ["simhark_testing/viewer", "dep:tokio"]
interface = ["dep:tokio-tungstenite", "dep:futures-util", "dep:prost", "crashpilot/interface"]
testing = ["dep:simhark_testing"]

[[bin]]
name = "goalie_tests"
path = "src/bin/goalie_tests.rs"
required-features = ["testing"]
